# aisgapwatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
aisgapwatch/: __init__.py  __main__.py  analyze.py  cli.py  data.py  detect.py  emit.py  geo.py  models.py  parsers.py  scoring.py
docs/: 01_ARCHITECTURE.md  02_EXPLAINED_SIMPLY.md
examples/: export_formats.py  help.txt  quickstart.py  sample_track.csv  version.txt
ports/: README.md
ports/go/: aisgapwatch.go  aisgapwatch_test.go  go.mod
ports/node/: aisgapwatch.js  package.json  test.js
ports/shell/: aisgapwatch.sh  test.sh
tests/: test_aisgapwatch.py  test_analyze.py  test_cli_formats.py  test_core_extra.py  test_emit.py
